--- a/visible-siren/package.json
+++ b/visible-siren/package.json
@@ -19,7 +19,27 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "4.44.2",
+    "bootstrap": "^4.5.0",
+    "gatsby": "^2.23.7",
+    "gatsby-image": "^2.4.7",
+    "gatsby-plugin-manifest": "^2.4.12",
+    "gatsby-plugin-offline": "^3.2.11",
+    "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-sass": "^2.3.4",
+    "gatsby-plugin-sharp": "^2.6.12",
+    "gatsby-source-filesystem": "^2.3.12",
+    "gatsby-transformer-sharp": "^2.5.5",
+    "nanoid": "^3.1.10",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
+    "react-bootstrap": "^1.0.1",
+    "react-github-btn": "^1.2.0",
+    "react-helmet": "^6.1.0",
+    "react-reveal": "^1.2.2",
+    "react-scroll": "^1.7.16",
+    "react-tilt": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +66,18 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.34"
+    "@types/react": "^17.0.34",
+    "babel-eslint": "^10.1.0",
+    "eslint": "7.2.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5"
   }
 }
