--- a/visible-siren/public/manifest.json
+++ b/visible-siren/public/manifest.json
@@ -1,25 +1,23 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "불이야!",
+  "name": "불이야! 화재 경보 사이렌 시각화",
+  "description" : "화재 경보 사이렌 시각화 플러그인",
+  "manifest_version": 2,
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
+      "src": "fire.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "browser_action" : {
+    "default_icon" : "fire.png"
+  },
+  "background" : {
+    "scripts" : [
+      "../src/views/main/index.tsx"
+    ],
+    "persistent" : true
+  }
 }
